tampilan layar lebar

--- a/index.html
+++ b/index.html
@@ -92,13 +92,16 @@
         </div>
     </div>
 
+    <div class="fixed-action-btn">
+        <a href="pintu.html" class="btn btn-large btn-floating green lighten-1"><i class="material-icons">laptop</i></a>
+    </div>
     <div id="confirm" class="modal">
         <div class="modal-content">
             apa kamu yakin untuk buka <span class="green-text">Pintu</span> ?
         </div>
         <div class="modal-footer">
             <a href="pintu://" class="modal-close waves-effect waves-green btn-flat">Ya</a>
-            <a href="#!" class="modal-close waves-effect waves-red btn-flat">Tidak</a>
+            <a href="#" class="modal-close waves-effect waves-red btn-flat">Tidak</a>
         </div>
     </div>
 
