pindah lokasi tombol layar lebar

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 
     <!-- kontak -->
     <div class="row center">
+        <a href="pintu.html" class="btn btn-floating green lighten-1"><i class="material-icons">laptop</i></a>
+        <br>
         <div class="chip hoverable z-depth-1 waves-effect waves-ripple" @click="contact" style="cursor: pointer">
             <img src="img/favicon.png" alt="jajanjawa">@jajanjawa
         </div>
@@ -92,9 +94,6 @@
         </div>
     </div>
 
-    <div class="fixed-action-btn">
-        <a href="pintu.html" class="btn btn-large btn-floating green lighten-1"><i class="material-icons">laptop</i></a>
-    </div>
     <div id="confirm" class="modal">
         <div class="modal-content">
             apa kamu yakin untuk buka <span class="green-text">Pintu</span> ?
