--- a/pintu.html
+++ b/pintu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <title>Pintu</title>
+    <title>Pintu - Investasi Bitcoin dan Crypto. Mudah. Praktis. Instan.</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="css/materials-icon.css" rel="stylesheet">
@@ -85,9 +85,12 @@
     </div>
 
     <div class="row center">
-        <a href="index.html" class="btn btn-floating green lighten-1"><i class="material-icons">smartphone</i></a>
-        <a href="#" class="btn btn-floating green lighten-1" @click.prevent="darkMode"><i class="material-icons">brightness_4</i></a>
-        <a href="berita.html" class="btn btn-floating green lighten-1"><i class="material-icons">event</i></a>
+        <a href="index.html" class="btn btn-floating green lighten-1 waves-effect waves-ripple"><i
+                class="material-icons">smartphone</i></a>
+        <a href="#" class="btn btn-floating green lighten-1 waves-effect waves-ripple" @click.prevent="darkMode"><i
+                class="material-icons">brightness_4</i></a>
+        <a href="berita.html" class="btn btn-floating green lighten-1 waves-effect waves-ripple"><i
+                class="material-icons">event</i></a>
     </div>
 
     <!-- kontak -->
