layout layar lebar

--- a/pintu.html
+++ b/pintu.html
@@ -14,7 +14,7 @@
     <img src="img/pintu_logo_text.png" alt="Pintu" style="margin-top: 5px" class="responsive-img">
 
     <div class="row">
-        <div v-for="(it,index) in coins" :key="index" class="col s12 l6 center">
+        <div v-for="(it,index) in coins" :key="index" class="col s12 l6 xl4 center">
             <div class="chip z-depth-1">
                 <img :src="it.icon" :alt="it.name">{{it.name}}
             </div>
