--- a/berita.html
+++ b/berita.html
@@ -15,7 +15,7 @@
 
     <div class="row">
         <div v-for="it in news" :key="it.id" class="col s12">
-            <div class="card">
+            <div class="card hoverable">
                 <div class="card-content row">
                     <div class="col s4">
                         <img v-if="it.image" :src="it.image" class="responsive-img">
@@ -47,7 +47,7 @@
         </div>
         <div class="col s3">
             <div class="input-field">
-                <input id="page" type="number" min="1" :value="page" @input="page = $event.target.value">
+                <input id="page" type="number" min="1" :value="page" @input="page = parseInt($event.target.value)">
                 <label for="page" class="active">Halaman</label>
             </div>
         </div>
