buat link kalkulator

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </div>
 
     <div class="row center">
-        <a href="index.html" class="btn btn-floating green lighten-1 waves-effect waves-ripple"><i
-                class="material-icons">smartphone</i></a>
+        <a href="hitung.html" class="btn btn-floating green lighten-1 waves-effect waves-ripple"><i
+                class="material-icons">functions</i></a>
         <a href="#" class="btn btn-floating green lighten-1 waves-effect waves-ripple" @click.prevent="darkMode"><i
                 class="material-icons">brightness_4</i></a>
         <a href="berita.html" class="btn btn-floating green lighten-1 waves-effect waves-ripple"><i
